--- a/DigitalAppaloosa.Shared/packages.config
+++ b/DigitalAppaloosa.Shared/packages.config
@@ -6,4 +6,6 @@
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net46" userInstalled="true" />
+  <package id="Prism.UnityExtensions" version="5.0.1" targetFramework="net46" userInstalled="true" />
+  <package id="Unity" version="3.5.1405-prerelease" targetFramework="net46" userInstalled="true" />
 </packages>
