--- a/DigitalAppaloosa.Shared/packages.config
+++ b/DigitalAppaloosa.Shared/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.2.0" targetFramework="net46" userInstalled="true" />
+  <package id="NLog" version="4.0.1" targetFramework="net46" userInstalled="true" />
   <package id="Prism" version="5.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net46" userInstalled="true" />
