--- a/DigitalAppaloosa.UserInterface/packages.config
+++ b/DigitalAppaloosa.UserInterface/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3.0" targetFramework="net46" userInstalled="true" />
   <package id="MvvmLightLibs" version="5.1.1" targetFramework="net46" userInstalled="true" />
+  <package id="NLog" version="4.0.1" targetFramework="net46" userInstalled="true" />
+  <package id="NLog.Config" version="4.0.1" targetFramework="net46" userInstalled="true" />
+  <package id="NLog.Schema" version="4.0.1" targetFramework="net46" userInstalled="true" />
   <package id="Prism" version="5.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net46" userInstalled="true" />
