--- a/DigitalAppaloosa.UserInterface/NLog.config
+++ b/DigitalAppaloosa.UserInterface/NLog.config
@@ -17,7 +17,8 @@
   for information on customizing logging rules and outputs.
    -->
     <targets>
-        <target name="log1" xsi:type="ColoredConsole"/>
+        <!--|${stacktrace}-->
+        <target name="log1" xsi:type="ColoredConsole" layout="${time}|${level}|${callsite:className=false}|${message}"/>
         <target name="log2" xsi:type="File" fileName="ErrorLog.txt"/>
         <!-- 
     add your targets here 
