--- a/Modules/DigitalAppaloosa.Modules.Experimental/DigitalAppaloosa.Modules.Experimental.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/DigitalAppaloosa.Modules.Experimental.csproj
@@ -113,8 +113,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ExperimentalModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\RibbonGroupTestAViewModel.cs" />
     <Compile Include="ViewModels\RibbonTabTestAViewModel.cs" />
     <Compile Include="ViewModels\TestCanvasViewModel.cs" />
+    <Compile Include="Views\RibbonGroupTestAView.xaml.cs">
+      <DependentUpon>RibbonGroupTestAView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RibbonTabTestAView.xaml.cs">
       <DependentUpon>RibbonTabTestAView.xaml</DependentUpon>
     </Compile>
@@ -137,6 +141,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\RibbonGroupTestAView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\RibbonTabTestAView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
