--- a/Modules/DigitalAppaloosa.Modules.Experimental/DigitalAppaloosa.Modules.Experimental.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Experimental/DigitalAppaloosa.Modules.Experimental.csproj
@@ -110,7 +110,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ExperimentalStaticCommands.cs" />
     <Compile Include="ExperimentalModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\RibbonGroupTestAViewModel.cs" />
@@ -119,6 +119,9 @@
     <Compile Include="ViewModels\TestCanvasViewModel.cs" />
     <Compile Include="Views\RibbonGroupTestAView.xaml.cs">
       <DependentUpon>RibbonGroupTestAView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RibbonGroupTestBView.xaml.cs">
+      <DependentUpon>RibbonGroupTestBView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RibbonTabTestAView.xaml.cs">
       <DependentUpon>RibbonTabTestAView.xaml</DependentUpon>
@@ -146,6 +149,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\RibbonGroupTestAView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RibbonGroupTestBView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
