--- a/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F2467528-E68C-4C68-884C-16B06E0785F2}</ProjectGuid>
+    <ProjectGuid>{500FF477-6433-4A64-8F8C-E3DAD945E8D0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalAppaloosa.Modules.Experimental</RootNamespace>
-    <AssemblyName>DigitalAppaloosa.Modules.Experimental</AssemblyName>
+    <RootNamespace>DigitalAppaloosa.Modules.Drafting</RootNamespace>
+    <AssemblyName>DigitalAppaloosa.Modules.Drafting</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -58,10 +58,6 @@
       <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NLog.4.1.2\lib\net45\NLog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="Prism, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
@@ -79,7 +75,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Controls.Ribbon" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MvvmLightLibs.5.2.0.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -94,32 +89,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExperimentalStaticCommands.cs" />
-    <Compile Include="ExperimentalModule.cs" />
+    <Compile Include="DraftingModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\RibbonGroupTestAViewModel.cs" />
-    <Compile Include="ViewModels\RibbonTabTestAViewModel.cs" />
-    <Compile Include="ViewModels\RibbonTestAViewModel.cs" />
-    <Compile Include="ViewModels\TestCanvasViewModel.cs" />
-    <Compile Include="Views\RibbonGroupTestAView.xaml.cs">
-      <DependentUpon>RibbonGroupTestAView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\RibbonGroupTestBView.xaml.cs">
-      <DependentUpon>RibbonGroupTestBView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\RibbonTabTestAView.xaml.cs">
-      <DependentUpon>RibbonTabTestAView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\RibbonTestAView.xaml.cs">
-      <DependentUpon>RibbonTestAView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\TestCanvasView.xaml.cs">
-      <DependentUpon>TestCanvasView.xaml</DependentUpon>
+    <Compile Include="ViewModels\HeadDraftingPaneViewModel.cs" />
+    <Compile Include="Views\HeadDraftingPaneView.xaml.cs">
+      <DependentUpon>HeadDraftingPaneView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
+    <Page Include="Views\HeadDraftingPaneView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\DigitalAppaloosa.Interfaces\DigitalAppaloosa.Interfaces.csproj">
@@ -132,26 +113,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\RibbonGroupTestAView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\RibbonGroupTestBView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\RibbonTabTestAView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\RibbonTestAView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\TestCanvasView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
