--- a/Modules/DigitalAppaloosa.Modules.Drafting/packages.config
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" userInstalled="true" />
-  <package id="NLog" version="4.1.2" targetFramework="net46" userInstalled="true" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net46" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net46" />
   <package id="Prism.Unity" version="6.1.0" targetFramework="net46" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net46" />
-  <package id="Unity" version="4.0.1" targetFramework="net46" userInstalled="true" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
