--- a/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
@@ -125,6 +125,10 @@
       <Project>{a674f183-292a-4971-8ead-0c84e43be451}</Project>
       <Name>DigitalAppaloosa.Shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\DigitalAppaloosa.Windows\DigitalAppaloosa.Windows.csproj">
+      <Project>{d5ad372b-2f09-41ea-8b4b-e0089bcbf535}</Project>
+      <Name>DigitalAppaloosa.Windows</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
