--- a/DigitalAppaloosa.Windows/DigitalAppaloosa.Windows.csproj
+++ b/DigitalAppaloosa.Windows/DigitalAppaloosa.Windows.csproj
@@ -5,6 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D5AD372B-2F09-41EA-8B4B-E0089BCBF535}</ProjectGuid>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalAppaloosa.Windows</RootNamespace>
@@ -48,15 +49,22 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Behaviors\DraftingBehavior.cs" />
-    <Compile Include="Behaviors\DragDropBehavior.cs" />
+    <Compile Include="Behaviors\MouseButtonEventBehavior.cs" />
+    <Compile Include="Handlers\DragDropHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DigitalAppaloosa.Contracts\DigitalAppaloosa.Contracts.csproj">
+      <Project>{5d69fe2a-834c-427a-a190-358dc8fb203a}</Project>
+      <Name>DigitalAppaloosa.Contracts</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
