--- a/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
@@ -5,6 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{500FF477-6433-4A64-8F8C-E3DAD945E8D0}</ProjectGuid>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalAppaloosa.Modules.Drafting</RootNamespace>
@@ -96,6 +97,7 @@
   <ItemGroup>
     <Compile Include="DraftingController.cs" />
     <Compile Include="DraftingModule.cs" />
+    <Compile Include="Handlers\DraftingHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\DraftingRibbonTabViewModel.cs" />
     <Compile Include="ViewModels\HeadDraftingPaneViewModel.cs" />
@@ -117,9 +119,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DigitalAppaloosa.Interfaces\DigitalAppaloosa.Interfaces.csproj">
-      <Project>{d5b2fab2-0532-4d7e-9b55-05dd11d9fe9b}</Project>
-      <Name>DigitalAppaloosa.Interfaces</Name>
+    <ProjectReference Include="..\..\DigitalAppaloosa.Contracts\DigitalAppaloosa.Contracts.csproj">
+      <Project>{5d69fe2a-834c-427a-a190-358dc8fb203a}</Project>
+      <Name>DigitalAppaloosa.Contracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\DigitalAppaloosa.Shared\DigitalAppaloosa.Shared.csproj">
       <Project>{a674f183-292a-4971-8ead-0c84e43be451}</Project>
@@ -133,8 +135,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
