--- a/DigitalAppaloosa.Contracts/DigitalAppaloosa.Contracts.csproj
+++ b/DigitalAppaloosa.Contracts/DigitalAppaloosa.Contracts.csproj
@@ -4,11 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D5B2FAB2-0532-4D7E-9B55-05DD11D9FE9B}</ProjectGuid>
+    <ProjectGuid>{5D69FE2A-834C-427A-A190-358DC8FB203A}</ProjectGuid>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalAppaloosa.Interfaces</RootNamespace>
-    <AssemblyName>DigitalAppaloosa.Interfaces</AssemblyName>
+    <RootNamespace>DigitalAppaloosa.Contracts</RootNamespace>
+    <AssemblyName>DigitalAppaloosa.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,11 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RegionNames.cs" />
+    <Compile Include="Interfaces\IMouseButtonEventHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionNames.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
