--- a/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
@@ -100,6 +100,9 @@
     <Compile Include="DraftingModule.cs" />
     <Compile Include="Handlers\DraftingHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\DraftingCircleStrategy.cs" />
+    <Compile Include="Strategies\DraftingRectangleStrategy.cs" />
+    <Compile Include="Strategies\DraftingStrategyBase.cs" />
     <Compile Include="ViewModels\DraftingRibbonTabViewModel.cs" />
     <Compile Include="ViewModels\HeadDraftingPaneViewModel.cs" />
     <Compile Include="Views\DraftingRibbonTabView.xaml.cs">
