--- a/DigitalAppaloosa.Contracts/DigitalAppaloosa.Contracts.csproj
+++ b/DigitalAppaloosa.Contracts/DigitalAppaloosa.Contracts.csproj
@@ -44,6 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\FigureOperation.cs" />
     <Compile Include="Interfaces\IDraftingPaneViewModel.cs" />
     <Compile Include="Interfaces\IMouseButtonEventHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
