--- a/Modules/DigitalAppaloosa.Modules.Drafting/packages.config
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
-  <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net46" />
-  <package id="NLog" version="4.1.2" targetFramework="net46" />
+  <package id="ControlzEx" version="2.0.1.61" targetFramework="net46" />
+  <package id="Fluent.Ribbon" version="4.0.3.394" targetFramework="net46" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
+  <package id="NLog" version="4.3.3" targetFramework="net46" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net46" />
-  <package id="Prism.Unity" version="6.1.0" targetFramework="net46" />
+  <package id="Prism.Unity" version="6.1.1" targetFramework="net46" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net46" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
