--- a/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
+++ b/Modules/DigitalAppaloosa.Modules.Drafting/DigitalAppaloosa.Modules.Drafting.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>DigitalAppaloosa.Modules.Drafting.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>DigitalAppaloosa.Modules.Drafting.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=2.0.1.61, Culture=neutral, PublicKeyToken=f08b075e934b7045, processorArchitecture=MSIL">
@@ -106,6 +108,7 @@
     <Compile Include="DraftingFactory.cs" />
     <Compile Include="DraftingModule.cs" />
     <Compile Include="Handlers\DraftingHandler.cs" />
+    <Compile Include="Handlers\ShowPathHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategies\DraftingCircleStrategy.cs" />
     <Compile Include="Strategies\DraftingLineStrategy.cs" />
@@ -145,6 +148,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="DigitalAppaloosa.Modules.Drafting.ruleset" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
